2002-10-21  Richard Hult  <rhult@codefactory.se>

	* src/yelp-view-content.c (content_show_uri): Don't try to set
	focus on view, use view->widget.

	* src/yelp-view-toc.c (toc_get_html):
	* src/yelp-view-index.c (index_get_html):
	* src/yelp-view.c (yelp_view_get_html): Implement
	YelpView::get_html.

	* src/yelp-view.h: Add virtual function get_html that returns the
	YelpHtml used by the view.

	* src/yelp-html-gtkhtml2.c (yelp_html_find_next): Implement.

	* src/yelp-html.h (yelp_html_find_next): Add virtual function
	find_next.

	* src/yelp-window.c (window_find_cb): The start of find
	functionality, needs more work.
	(window_init): Remove unused view_current variable.

2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_LDADD): link with POPT_LIBS. 

	* configure.in: Check for popt, fixes #96168

	* src/yelp-uri.c (yelp_uri_no_path): added, support to easy check
	  if URI is of type 'index:' without any path.

	* src/yelp-view-index.c (index_show_uri): Don't try loading if URI
	  is just 'index:'. Fixes #95877

2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_start): no need to check for YELP_URI_TYPE_GHELP_OTHER
	  since it will never get here with that URI type.
	(yelp_reader_start): Check for file, unknown and ghelp_other and
	  display it with gnome_uri_show, fixes #95181, thanks Paolo for
	  investigating this.

2002-10-08  Paolo Maggi <maggi@athena.polito.it>

	* src/yelp-window.[ch]: YelpWindow is now inherited from GnomeApp.
	The window title is now "title - Help Browser", instead of 
	"Help Browser:title", in this way you can see in the tasklist applet
	the name of the loaded page.
	Removed the gconf stuff since is no more needed.
	Note that Yelp still does not monitor menus_have_icons gconf key

	* src/yelp-view-content.c (content_show_uri): set the loading page
	title to "Loading...", instead of ".."

	* src/yelp-view-index.c (index_show_uri): ditto